--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <p id="loser" class="hide">Sorry, you lost. <a href="./index.html">Play again?</a></p>
   </div>
   <script src="words.js"></script>
-  <script src="app.js"></script>
+  <script src="https://d3js.org/d3.v5.js"></script>
+  <script src="solutions/d3/app.js"></script>
 </body>
 </html>
